<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="95dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            tools:layout_margin="5dp">

            <TextView
                android:id="@+id/indice_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indice" />

            <TextView
                android:id="@+id/data_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data" />

            <TextView
                android:id="@+id/grau_obs_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grau_de_obesidade" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>